# knight-s-tour

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  board.cpp  board.hpp  main.cpp  run-me
doxygen-documentation/html/: _board_8cpp.html  _board_8cpp__incl.map  _board_8cpp__incl.md5  _board_8hpp.html  _board_8hpp__dep__incl.map  _board_8hpp__dep__incl.md5  _board_8hpp__incl.map  _board_8hpp__incl.md5  _board_8hpp_source.html  _board_size_8cpp.html  _board_size_8cpp__incl.map  _board_size_8cpp__incl.md5  _board_size_8hpp.html  _board_size_8hpp__dep__incl.map  _board_size_8hpp__dep__incl.md5  _board_size_8hpp__incl.map  _board_size_8hpp__incl.md5  _board_size_8hpp_source.html  _game_8cpp.html  _game_8cpp__incl.map  _game_8cpp__incl.md5  _game_8hpp.html  _game_8hpp__dep__incl.map  _game_8hpp__dep__incl.md5  _game_8hpp__incl.map  _game_8hpp__incl.md5  _game_8hpp_source.html  _r_e_a_d_m_e_8md.html  _text_constants_8hpp.html  _text_constants_8hpp__dep__incl.map  _text_constants_8hpp__dep__incl.md5  _text_constants_8hpp__incl.map  _text_constants_8hpp__incl.md5  _text_constants_8hpp_source.html  annotated.html  annotated_dup.js  class_board-members.html  class_board.html  class_board.js  class_board_a616fb0310e8fd033213aefd87b1b541a_cgraph.map  (+84 more)
doxygen-documentation/html/search/: all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  (+20 more)
headers/: Board.hpp  BoardSize.hpp  board.hpp  game.hpp
sources/: Board.cpp  BoardSize.cpp  BoardSize.hpp  Game.cpp  Game.hpp  TextConstants.hpp  board.cpp  game.cpp  main.cpp
sources/algorithms/: IKnightsTourAlgorithm.hpp  WarnsdorffAlgorithm.cpp  WarnsdorffAlgorithm.hpp
sources/chessboards/: Board.cpp  Board.hpp  BoardSize.cpp  BoardSize.hpp  Chessboard.cpp  Chessboard.hpp  Coordinates.hpp  IChessboard.hpp
sources/constants/: TextConstants.hpp
sources/game/: Game.cpp  Game.hpp
sources/logging/: Exception.hpp  ILog.hpp  ILogger.hpp  Log.hpp  Logger.hpp
